[package]
name = "kas-7guis"
version = "0.1.0"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2021"
resolver = "2"
publish = false

[dependencies]
kas = { version = "0.11.0" }
chrono = "0.4"
env_logger = "0.8"
pest = "2.1"
pest_derive = "2.1"

[patch.crates-io.kas]
#path = '../kas'
git = "https://github.com/kas-gui/kas"
rev = "84a814cdbd69610be918b66a1e7633b64350a9f2"
